added deployment to ci to docker hub

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,5 +40,4 @@ jobs:
       deployment:
         dockerhub:
           branch: master
-            commands:
-              - $DOCKER_HUB_TRIGGER
+          commands: $DOCKER_HUB_TRIGGER
