--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,8 @@ jobs:
       - run: yarn test
 
       #deploy to docker hub
-      - deployment:
-          dockerhub:
-            branch: master
-            commands: $DOCKER_HUB_TRIGGER
+      deployment:
+        dockerhub:
+          branch: master
+          commands: 
+            - $DOCKER_HUB_TRIGGER
