--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,4 +41,4 @@ jobs:
       dockerhub:
         branch: master
         commands: 
-          - DOCKER_HUB_TRIGGER
+          - $DOCKER_HUB_TRIGGER
