--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start-docker": "ng serve --host 0.0.0.0",
     "build": "ng build",
     "test": "ng test --watch false --single-run true",
     "lint": "ng lint",
