--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "start-docker": "ng serve --host 0.0.0.0",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test --watch false --single-run true",
     "lint": "ng lint",
     "e2e": "ng e2e"
