--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "start-docker": "ng serve --host 0.0.0.0",
+    "start-docker": "http-server -a 0.0.0.0 -p 4200",
     "build": "ng build --prod",
     "test": "ng test --watch false --single-run true",
     "lint": "ng lint",
@@ -24,6 +24,7 @@
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^2.2.2",
     "core-js": "^2.4.1",
+    "http-server": "^0.11.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
