removed prod flag from build

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "start-docker": "http-server -a 0.0.0.0 -p 4200",
-    "build": "ng build --prod",
+    "build": "ng build",
     "test": "ng test --watch false --single-run true",
     "lint": "ng lint",
     "e2e": "ng e2e"
