--- a/httpd.conf
+++ b/httpd.conf
@@ -1,3 +1,4 @@
+LoadModule mpm_event_module modules/mod_mpm_event.so
 <Directory /var/www/>
         Options Indexes FollowSymLinks
         AllowOverride All
