--- a/httpd.conf
+++ b/httpd.conf
@@ -192,7 +192,7 @@ LoadModule dir_module modules/mod_dir.so
 #LoadModule speling_module modules/mod_speling.so
 #LoadModule userdir_module modules/mod_userdir.so
 LoadModule alias_module modules/mod_alias.so
-#LoadModule rewrite_module modules/mod_rewrite.so
+LoadModule rewrite_module modules/mod_rewrite.so
 
 <IfModule unixd_module>
 #
@@ -225,7 +225,7 @@ Group daemon
 # e-mailed.  This address appears on some server-generated pages, such
 # as error documents.  e.g. admin@your-domain.com
 #
-ServerAdmin you@example.com
+ServerAdmin zachary.maddox@gmail.com
 
 #
 # ServerName gives the name and port that the server uses to identify itself.
@@ -285,6 +285,14 @@ DocumentRoot "/usr/local/apache2/htdocs"
     # Controls who can get stuff from this server.
     #
     Require all granted
+
+    RewriteEngine on
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    
+    # not rewrite css, js and images
+    RewriteCond %{REQUEST_URI} !\.(?:css|js|map|jpe?g|gif|png)$ [NC]
+    RewriteRule ^(.*)$ /index.html?path=$1 [NC,L,QSA]
 </Directory>
 
 #
