--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,5 +36,21 @@ jobs:
       # run tests!
       - run: yarn test
 
-      # run deploy
-      - run: $DOCKER_HUB_TRIGGER
+  deploy:
+    steps:
+      -checkout
+      run:
+        name: Deploy Docker Hub
+        - command: $DOCKER_HUB_TRIGGER
+
+workflows:
+  version: 2
+  build-and-deploy
+    jobs
+      - build
+      - deploy:
+        requires:
+          - build
+        filter:
+          branches:
+            only: master
