--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,11 +35,20 @@ jobs:
         
       # run tests!
       - run: yarn test
-      
+  deploy:
+    machine:
+      enabled: true
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - run: 
+          name: Deploy to Docker Hub
+          command: $DOCKER_HUB_TRIGGER
+
 workflows:
   version: 2
   build-and-deploy
-    jobs
+    jobs:
       - build
       - deploy:
         requires:
