--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,7 @@ workflows:
       - deploy:
         requires:
           - build
-        filter:
+        filters:
           branches:
-            only: master
+            only: 
+              - master
