--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,5 +55,4 @@ workflows:
           - build
         filters:
           branches:
-            only: 
-              - master
+            only: master
