--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,9 +41,7 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
-      - run: 
-          name: Deploy to Docker Hub
-          command: $DOCKER_HUB_TRIGGER
+      - run: $DOCKER_HUB_TRIGGER
 
 workflows:
   version: 2
@@ -51,8 +49,8 @@ workflows:
     jobs:
       - build
       - deploy:
-        requires:
-          - build
-        filters:
-          branches:
-            only: master
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
