added build and lint to ci build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,12 @@ jobs:
         
       # run tests!
       - run: yarn test
+
+      # run build
+      - run: yarn build
+
+      #run lint
+      - run: yarn lint
   deploy:
     machine:
       enabled: true
