--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,10 @@ jobs:
       # run build
       - run: yarn build
 
+      - store_artifacts:
+          path: /dist
+          destination: dist
+
       #run lint
       - run: yarn lint
   deploy:
