--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
       - run: yarn build
 
       - store_artifacts:
-          path: /dist
+          path: ~/repo/dist
           destination: dist
 
       #run lint
