--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "package": "cd dist && zip dist.zip *",
     "test": "ng test --watch=false --single-run=true --code-coverage=true",
     "lint": "ng lint",
     "e2e": "ng e2e"
